Basic website working

--- a/templates/result.html
+++ b/templates/result.html
@@ -13,5 +13,7 @@
             <p><input type=submit value=Search>
         </form>
 
+        <h1>Search Result</h1>
+        <img src="{{ result_graph }}" alt="Result Graph for User Search">
     </body>
 </html>
