Changed visuals a bit

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,14 @@
     <img src="static/visuals/faith-v.jpg">
     <img src="static/visuals/repentance-v.jpg">
     <img src="static/visuals/baptism-v.jpg">
+    <img src="static/visuals/holy-v.jpg">
     <img src="static/visuals/ghost-v.jpg">
     <img src="static/visuals/spirit-v.jpg">
     <img src="static/visuals/endure-v.jpg">
-    <img src="static/visuals/charity-v.jpg">
     <img src="static/visuals/salvation-v.jpg">
     <img src="static/visuals/eternal-v.jpg">
     <img src="static/visuals/life-v.jpg">
+    <img src="static/visuals/doctrine-v.jpg">
+    <img src="static/visuals/gospel-v.jpg">
   </div>
 {% endblock %}
